[package]
name = "generic_cong_avoid"
version = "0.2.1"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
description = "A Congestion Control Plane"
homepage = "https://ccp-project.github.io"
repository = "https://github.com/ccp-project/generic-cong-avoid"
license = "ISC"

[dependencies]
clap = "2.29"
fnv = "1"
portus = { git = "https://github.com/ccp-project/portus", branch = "many_to_one" }
slog = {version = "2"}
slog-async = "2"
slog-term = "2"
time = "0.1"

[dependencies.nom]
version = "4"
features = ["verbose-errors"]
