[package]
name = "generic_cong_avoid"
version = "0.2.1"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
description = "A Congestion Control Plane"
homepage = "https://ccp-project.github.io"
repository = "https://github.com/ccp-project/generic-cong-avoid"
license = "ISC"
edition="2018"

[dependencies]
clap = "2"
portus = "0.6"
tracing = "0.1"
time = "0.1"
