[package]
name = "py_generic_cong_avoid"
version = "0.3.0"
authors = ["Frank Cangialosi <frankc@csail.mit.edu>"]
edition = "2018"

[dependencies]
clap = "2.33"
fnv = "1"
generic_cong_avoid = { path = "../" }
portus = "0.7"
simple-signal = "1"
tracing = "0.1"
tracing-subscriber = "0.2"

[dependencies.pyo3]
version = "0.17"
features = ["extension-module", "macros"]

[lib]
name = "py_generic_cong_avoid"
crate-type = ["cdylib", "lib"]
